# battery-monitor

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  POTFILES.in  README.md  battery-monitor-autostart.desktop.in  battery-monitor.pot  generate_desktop_files  index.html  meson.build  pyproject.toml  setup.cfg  setup.py  test  update-pot  update.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish-deb.yml  update-stable.yml
battery_monitor/: AboutWindow.py  AppIndicator.py  BatteryMonitor.py  Notification.py
data/: battery-monitor-autostart.desktop.in  battery-monitor.desktop.in  meson.build  org.mamolinux.battery-monitor.gschema.xml.in
debian/: README.Debian  README.source  battery-monitor.1  battery-monitor.doc-base  changelog  control  copyright  postinst  postrm  requires.txt  rules
docs/: BatteryMonitor.rst  conf.py  index.rst  install_docs.py  meson.build  modules.rst
etc/xdg/autostart/: battery-monitor-autostart.desktop
po/: LINGUAS  POTFILES  battery-monitor.pot  bn.po  de.po  en.po  en_GB.po  es.po  lo.po  meson.build
src/: battery-monitor.in  meson.build
src/BatteryMonitor/: BMonitor.py  ErrorLib.py  Notification.py  about_window.py  bm_daemon.py  cli_args.py  cmd_lines.py  config.py  gui.py  indicator.py  main.py  meson.build
src/BatteryMonitor/ui/: battery-monitor.ui  logger.ui  shortcuts.ui
styles/css-styles/: responsive_navbar.css  responsive_sections.css  style.css
styles/jscripts/: download.js  navbar.js  sidebar.js
test/: test
usr/lib/battery-monitor/: AboutWindow.py  AppIndicator.py  BatteryMonitor.py  ErrorLib.py  Notification.py  SettingsWindow.py  battery-monitor.py  config.py
usr/share/applications/: battery-monitor.desktop
usr/share/applications/kde4/: battery-monitor.desktop
usr/share/battery-monitor/: battery-monitor.ui  shortcuts.ui
usr/share/glib-2.0/schemas/: org.x.battery-monitor.gschema.xml
