[metadata]
name = battery-monitor
version = file: src/BatteryMonitor/VERSION
author = Himadri Sekhar Basu
author_email = hsb10@iitbbs.ac.in
description = Battery Monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/hsbasu/battery-monitor
project_urls =
    Bug Tracker = https://www.github.com/hsbasu/battery-monitor/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved
     :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Accessories

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
include_package_data = True
install_requires =
  configobj
  PyGObject
  setproctitle
  tldextract

[options.package_data]
* = *VERSION

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    battery-monitor = BatteryMonitor.main:start_BM

[build_i18n]
domain=battery-monitor
desktop_files=[("share/applications", ("data/battery-monitor*.desktop.in",
                                      ))]
schemas_files=[("share/glib-2.0/schemas", 
                 ("data/org.mamolinux.battery-monitor.gschema.xml.in",))
              ]
